# RedisJSON

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  AGENTS.md  API.md  CLAUDE.md  CMakeLists.txt  COPYRIGHT  Cargo.toml  DESIGN.md  Dockerfile  Dockerfile.alma10  Dockerfile.alma8  Dockerfile.alma9  Dockerfile.alpine  Dockerfile.amazonlinux2  Dockerfile.amazonlinux2023  Dockerfile.azurelinux3  Dockerfile.bionic  Dockerfile.bookworm  Dockerfile.bullseye  Dockerfile.focal  Dockerfile.jammy  Dockerfile.mariner2  Dockerfile.noble  Dockerfile.resolute  Dockerfile.rocky10  Dockerfile.rocky8  Dockerfile.rocky9  Dockerfile.trixie  Dockerfile_Alpine  FUNCTIONS.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  TYPES.md  (+19 more)
.cargo/: config.toml
.circleci/: config-redisjson1.yml  config.yaml  config.yml
.cursor/rules/: rust.mdc  testing.mdc
.github/: .trigger  ISSUE_TEMPLATE.md  spellcheck-settings.yml  wordlist.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/scripts/: parse-test-results.sh
.github/workflows/: MEMORY_TESTING_INTEGRATION.md  alpine-arm.yml  alpine.yml  backport_pr.yml  benchmark-flow.yml  benchmark-runner.yml  benchmark-trigger.yml  build-linux-platforms.yml  bump-version.yml  ci-basic.yml  codecov.yml  deploy-docs.yaml  event-build-sanity.yml  event-ci.yml  event-nightly.yml  event-pull-request.yml  event-pull_request.yml  event-tag.yml  event-weekly.yml  flow-alpine.yml  flow-azurelinux3-arm.yml  flow-ci.yml  flow-clippy.yml  flow-coverage.yml  flow-linter.yml  flow-linux-arm.yml  flow-linux-x86.yml  flow-linux.yml  flow-macos.yml  flow-memory-nightly.yml  flow-memory-regression.yml  flow-nightly.yml  flow-random-traffic.yml  flow-sanitizer.yml  flow-self-hosted-arm.yml  flow-spellcheck.yml  flow-tag.yml  flow-ubuntu-arm.yml  freebsd.yml  macos-build-and-deploy.yml  (+14 more)
.install/: activate_venv.sh  amazon_linux_2.sh  bionic.sh  build_package_requirements.txt  common_installations.sh  debian_gnu_linux_11.sh  focal.sh  get-redis-ref.sh  get_redis.sh  getrust.sh  install_aws.sh  install_clang.sh  install_cmake.sh  install_redis.sh  install_script.sh  jammy.sh  macos-12.sh  macos.sh  mariner2.sh  ubuntu_18.04.sh  ubuntu_20.04.sh  ubuntu_22.04.sh  update_clang_alternatives.sh
.install/lib/: detect-osnick.sh  packages.sh  pm.sh  setup-python.sh
.install/os/: alma10.sh  alma8.sh  alma9.sh  alpine.sh  amazonlinux2.sh  amazonlinux2023.sh  azurelinux3.sh  bionic.sh  bookworm.sh  bullseye.sh  focal.sh  jammy.sh  macos.sh  mariner2.sh  noble.sh  resolute.sh  rocky10.sh  rocky8.sh  rocky9.sh  trixie.sh
.install/quirks/: alma8.sh  alma9.sh  alpine.sh  amazonlinux2.sh  bionic.sh  focal.sh  macos.sh  (+2 more)
benches/: json_path_bench.rs  sample_bench.rs
docs/: CNAME  Indexing_JSON.md  commands.md  contrib.md  design.md  developer.md  gtm.js  index.md  indexing_JSON.md  path.md  performance.md  ram.md  requirements.txt
example/: Makefile  module.c
json_examples/: giveme_every_thing_result.json
json_parser/: Cargo.toml
json_parser/src/: lib.rs  value.rs
json_path/: Cargo.toml
json_path/json_examples/: giveme_every_thing_result.json
json_path/src/: grammar.pest  json_node.rs  json_path.rs  lib.rs  main.rs  parser.rs  select_value.rs
json_path/tests/: array_filter.rs  common.rs  filter.rs  jsonpath_examples.rs  op.rs  paths.rs  return_type.rs
json_value/: Cargo.toml
licenses/: AGPLv3.txt
pack/: ramp.yml
redis_json/: Cargo.toml
redis_json/src/: allocator.rs  allocators.rs  backward.rs  c_api.rs  commands.rs  defrag.rs  depth_tracking_de.rs  error.rs  formatter.rs  iterator_exts.rs  ivalue_manager.rs  key_value.rs  lib.rs  manager.rs  redisjson.rs  serde_value_manager.rs  value_manager.rs
redis_json/src/include/: rejson_api.h
rmutil/: Makefile  alloc.c  alloc.h  strings.c  strings.h  test_priority_queue.c  test_vector.c  util.c  util.h  vector.c  vector.h
sbin/: extract_symbols_safe.sh  get-redisearch  getver  pack.sh  setup  system-setup.py  update_clang_alternatives.sh  upload-artifacts  upload-artifacts-s3  verify-docker-images.sh
site/: .travis.yml
src/: CMakeLists.txt  Makefile  array_index.rs  backward.rs  c_api.rs  cache.c  cache.h  commands.rs  config.h  config.h.in  depth_deserializer.rs  error.rs  formatter.rs  index.rs  ivalue_manager.rs  json_node.rs  json_object.c  json_object.h  json_path.c  json_path.h  json_type.c  json_type.h  key_value.rs  lib.rs  manager.rs  module.c  nodevisitor.rs  notify.rs  object.c  object.h  object_type.c  object_type.h  path.c  path.h  print_version  print_version.c  ramp.yml  redisdoc.rs  redisjson.rs  redisjsonschema.rs  (+7 more)
src/commands/: index.rs
src/include/: rejson_api.h
src/jsonpath/: grammer.pest  json_node.rs  json_path.rs  main.rs  mod.rs  select_value.rs
src/select/: cmp.rs  expr_term.rs  mod.rs  select_value.rs  value_walker.rs
test/: CMakeLists.txt  Makefile  README.md  json-validatortron.sh  json_printer  json_printer.c  json_validator.c  minunit.h  test_json_object  test_json_object.c  test_json_printer  test_json_validator.sh  test_object  test_object.c
test/files/: .fail-025.json.swp
test/pytest/: Makefile  requirements.txt  rmtest  test.py
test/pytest/rmtest/: __init__.py
test/validatortron-files/: valid-002.json  valid-003.json  valid-009.json  valid-010.json  valid-011.json  valid-012.json  valid-013.json  valid-014.json  valid-015.json  valid-016.json  valid-017.json  valid-018.json  valid-jsonsl-colors  valid-jsonsl-couchbase_view_output  valid-jsonsl-flickr_api  valid-jsonsl-iphone  valid-jsonsl-jamendo_array  valid-jsonsl-json.org.example.cvg  valid-jsonsl-json.org.example.glossary  valid-jsonsl-json.org.example.menu  valid-jsonsl-json.org.example.servlet  valid-jsonsl-json.org.example.servlet_pretty  valid-jsonsl-json.org.example.widget  valid-jsonsl-nytimes.api  valid-jsonsl-objectish.json  valid-jsonsl-yahoo_api  valid-jsonsl-youtube_api
tests/module/: .gitignore  Cargo.toml  Makefile  build.rs  deps  dump.rdb  testLLAPI.c  testLLAPI.rs
tests/module/src/: lib.rs  rejson_api.c  rejson_api.rs  testLLAPI.c
util/: benchmark.py  memprof.py
(+183 files in other folders)
