[workspace]
resolver = "2"

members = [
    "json_path",
    "redis_json"
]

[workspace.dependencies]
ijson = { git="https://github.com/RedisJSON/ijson", rev="adf71f0c5e9a9356ac0d22d9e93b9f87a2ff4fc1", default-features=false}
serde_json = { version="1", features = ["unbounded_depth"]}
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bson = "2.11"

[workspace.package]
edition = "2021"
repository = "https://github.com/RedisJSON/RedisJSON"
license = "Redis Source Available License 2.0 (RSALv2) or the Server Side Public License v1 (SSPLv1) or the GNU Affero General Public License version 3 (AGPLv3)"

[profile.release]
debug = 1
