[workspace]
resolver = "2"

members = [
    "json_path",
    "redis_json"
]

[workspace.dependencies]
redis-module = { git="https://github.com/RedisLabsModules/redismodule-rs", tag="v2.1.3", default-features = false, features = ["min-redis-compatibility-version-7-4"] }
redis-module-macros = { git="https://github.com/RedisLabsModules/redismodule-rs", tag="v2.1.3" }
ijson = { git="https://github.com/RedisJSON/ijson", rev="5676f5929863113c2d0e38c8dc27632624217231", default-features=false}
# Pin serde_json below the version range that switched float formatting (ryu -> zmij),
# to keep exponent formatting stable (e.g. `e308` vs `e+308`) and avoid test churn on `cargo update`.
serde_json = { version = ">=1.0.0, <1.0.147", features = ["unbounded_depth"] }
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
bson = "2.11"
# Pin home crate to 0.5.11 for Alpine Linux Rust 1.87 compatibility
# home@0.5.12+ requires Rust 1.88
home = "=0.5.11"

[workspace.package]
edition = "2021"
repository = "https://github.com/RedisJSON/RedisJSON"
license = "Redis Source Available License 2.0 (RSALv2) or the Server Side Public License v1 (SSPLv1) or the GNU Affero General Public License version 3 (AGPLv3)"

[profile.release]
debug = 1
