[package]
name = "json_path"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.1"
pest_derive = "2.1"
serde_json = { version="1.0", features = ["unbounded_depth"]}
serde = "1.0"
ijson = "0.1.3"
log = "0.4"
regex = "1"

[dev-dependencies]
env_logger = "0.10.0"

[[bin]]
name = "jsonpath"
path = "src/main.rs"

[[test]]
name = "array_filter"
path = "tests/array_filter.rs"

[[test]]
name = "filter"
path = "tests/filter.rs"

[[test]]
name = "jsonpath_examples"
path = "tests/jsonpath_examples.rs"

[[test]]
name = "op"
path = "tests/op.rs"

[[test]]
name = "paths"
path = "tests/paths.rs"

[[test]]
name = "return_type"
path = "tests/return_type.rs"