[package]
name = "redis_json"
version = "99.99.99"
authors = ["Guy Korland <guy.korland@redis.com>", "Meir Shpilraien <meir@redis.com>", "Omer Shadmi <omer.shadmi@redis.com>"]
edition.workspace = true
description = "JSON data type for Redis"
repository.workspace = true
readme = "README.md" 
license.workspace = true
keywords = ["redis", "json", "plugin"]
categories = ["database-implementations"]
homepage = "https://redis.io/docs/stack/json/"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rejson"

[dev-dependencies]
env_logger = "0.10.0"

[dependencies]
bitflags = "1.3"
bson.workspace = true
ijson.workspace = true
serde_json.workspace = true
serde.workspace = true
libc = "0.2"
redis-module = { git="https://github.com/RedisLabsModules/redismodule-rs", branch="master"}
#redis-module = "2.0"
redis-module-macros = "2.0"
itertools = "0.10"
json_path = {path="../json_path"}
linkme = "0.3"

[features]
as-library = []
thread_safe = ["ijson/thread_safe"]
