[package]
name = "redis_json"
version = "99.99.99"
authors = ["Guy Korland <guy.korland@redis.com>", "Meir Shpilraien <meir@redis.com>", "Omer Shadmi <omer.shadmi@redis.com>"]
edition.workspace = true
description = "JSON data type for Redis"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["redis", "json", "plugin"]
categories = ["database-implementations"]
homepage = "https://redis.io/docs/stack/json/"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rejson"

[dev-dependencies]
env_logger = "0.11"

[dependencies]
bitflags = "2"
bson.workspace = true
ijson.workspace = true
serde_json.workspace = true
serde.workspace = true
libc = "0.2"
redis-module ={ git="https://github.com/RedisLabsModules/redismodule-rs", rev="32f284bd18ee799e54f8da835c81a137a34d7f83", default-features = false, features = ["min-redis-compatibility-version-7-2"] }
redis-module-macros = { git="https://github.com/RedisLabsModules/redismodule-rs", rev="32f284bd18ee799e54f8da835c81a137a34d7f83" }
itertools = "0.13"
json_path = {path="../json_path"}
linkme = "0.3"
lazy_static = "1"

[features]
as-library = []
thread_safe = ["ijson/thread_safe"]
