[package]
name = "redis_json"
version = "8.4.1"
authors = ["Guy Korland <guy.korland@redis.com>", "Meir Shpilraien <meir@redis.com>", "Omer Shadmi <omer.shadmi@redis.com>"]
edition.workspace = true
description = "JSON data type for Redis"
repository.workspace = true
readme = "README.md"
license.workspace = true
keywords = ["redis", "json", "plugin"]
categories = ["database-implementations"]
homepage = "https://redis.io/docs/stack/json/"

[lib]
crate-type = ["cdylib", "rlib"]
name = "rejson"

[dependencies]
bitflags = "2"
bson.workspace = true
ijson.workspace = true
serde_json.workspace = true
serde.workspace = true
redis-module.workspace = true
redis-module-macros.workspace = true
half = "2.0.0"
libc = "0.2"
itertools = "0.13"
json_path = {path="../json_path"}
linkme = "0.3"
lazy_static = "1"

[features]
as-library = []
thread_safe = ["ijson/thread_safe"]
