# cargo-features = ["edition2021"]

[package]
name = "testLLAPI"
version = "99.99.99"
authors = ["Ephraim Feldblum <ephraim.feldblum@redis.com>"]
edition = "2021"
description = "Test module for low level C API for RedisJSON"

[lib]
crate-type = ["cdylib", "rlib"]
name = "testmod"

[dependencies]
# redis_module = "1.0.1"
redisjson = { git = "https://github.com/RedisJSON/RedisJSON" }
cstr = "0.2.10"
const_format = "0.2.26"
konst = "0.2.19"
function_name = "0.3.0"

bitflags = "1.3"
log = "0.4"
bson = "0.14"
ijson = "0.1.3"
serde_json = "1.0"
serde = "1.0"
libc = "0.2"
jsonpath_lib = { git = "https://github.com/RedisJSON/jsonpath.git", branch = "generic_json_path" }
redis-module = { version="1.0", features = ["experimental-api"]}
itertools = "0.10"
# [features]
# test = ["redis-module/test"]
# as-library = []

[profile.release]
debug = 1
